Fix overscroll getting kicked in on non-precise wheel scrolls

Seems a conditional was completely wrong. Write a unit test to ensure
the correct behaviour is maintained.

BUG=630014

Review-Url: https://codereview.chromium.org/2356433003
Cr-Commit-Position: refs/heads/master@{#420212}

Former-commit-id: 72ca9ac43f9b025746520bdbe22a6a3e5dd33399